src/objects/MediaChangeRequest__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Media Change Requests</relationshipLabel>
        <relationshipName>MediaChangeRequests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdditionalNotes__c</fullName>
        <label>Additional Notes</label>
        <length>32539</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AgeInBusinessHours__c</fullName>
        <label>Age in Business Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>DateAssigned__c - CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMHID__c</fullName>
        <formula>TEXT(Account__r.CMHID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMH ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <description>Field used in a report and for Age calculation. DO NOT DELETE</description>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <description>Field is being used in a report. It is used as a workaround because of the inability to filter on New and Old Values in the History reports.</description>
        <label>Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomizedContent__c</fullName>
        <label>Customized Content</label>
        <picklist>
            <picklistValues>
                <fullName>ADHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy/Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anxiety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold and Flu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colon (Colonoscopy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epilepsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exercise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypertension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infectious Disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Men&apos;s Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric (Cartoons)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rheumatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sleep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoking</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DateAssigned__c</fullName>
        <label>Date Assigned to Media</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeviceType__c</fullName>
        <label>Device Type</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wifi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallboard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FileLink__c</fullName>
        <label>File Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FileNames__c</fullName>
        <label>File Name(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HighPriorityReason__c</fullName>
        <label>High Priority Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HighPriority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NeverExpires__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Never Expires</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OtherContent__c</fullName>
        <label>Other Content</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalPassword__c</fullName>
        <label>Portal Password</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortalUsername__c</fullName>
        <label>Portal Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Media Change Requests</relationshipLabel>
        <relationshipName>MediaChangeRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold - Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the clinic customizations UI to indicate that a change request should be immediately submitted for approval.</description>
        <label>Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <controllingField>DeviceType__c</controllingField>
            <picklistValues>
                <fullName>Add Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Frequency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Specialty Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Sidebar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Slides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinic Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours Change Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Input Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landing Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSS Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Screenfeed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsor Veto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet Content Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet Patient Portals &amp; Websites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet Slides &amp; Videos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Media Change Request</label>
    <listViews>
        <fullName>All_Media_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>DeviceType__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DueDate__c</columns>
        <columns>HighPriority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Media Requests</label>
    </listViews>
    <listViews>
        <fullName>Completed_Sponsorship_Changes</fullName>
        <columns>NAME</columns>
        <columns>CMHID__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>HighPriority__c</columns>
        <columns>DateAssigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Add Sponsor,Ad Frequency,Sponsor Veto</value>
        </filters>
        <label>Completed Sponsorship Changes</label>
        <sharedTo>
            <group>SalesAnalysts</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Conor_s_Super_Customization_Fun_Time_1</fullName>
        <columns>HighPriority__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CMHID__c</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Accepted,In Progress,Rejected</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Klusendorf</value>
        </filters>
        <label>Conor&apos;s In Progress MCRs (In Progress)</label>
    </listViews>
    <listViews>
        <fullName>Conor_s_Super_Customization_Fun_Time_2</fullName>
        <columns>HighPriority__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>CMHID__c</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Subject__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Klusendorf</value>
        </filters>
        <label>Conor&apos;s New MCRs (New)</label>
    </listViews>
    <listViews>
        <fullName>Conor_s_Super_Fun_Completed_Fun_Time_1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>CMHID__c</columns>
        <columns>DateAssigned__c</columns>
        <columns>DueDate__c</columns>
        <columns>HighPriority__c</columns>
        <columns>HighPriorityReason__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Klusendorf</value>
        </filters>
        <label>Conor&apos;s Completed MCRs (Completed, Subm)</label>
    </listViews>
    <listViews>
        <fullName>IhsCustomizations_MediaChangeRequest</fullName>
        <filterScope>Queue</filterScope>
        <label>IHS Customizations</label>
        <queue>IhsCustomizations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Katie_s_In_Progress_MCR_s</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>DateAssigned__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Shlemon</value>
        </filters>
        <label>Katie&apos;s In Progress MCR&apos;s</label>
    </listViews>
    <listViews>
        <fullName>Pending_Sponsorship_Requests</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>DeviceType__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DueDate__c</columns>
        <columns>HighPriority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MediaChangeRequest__c.Sponsor_Change</value>
        </filters>
        <label>Pending Sponsorship Requests</label>
    </listViews>
    <listViews>
        <fullName>Submitted_Sponsorship_Change</fullName>
        <columns>NAME</columns>
        <columns>CMHID__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>HighPriority__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Add Sponsor,Ad Frequency,Sponsor Veto</value>
        </filters>
        <label>Submitted Sponsorship Change</label>
        <sharedTo>
            <group>SalesAnalysts</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Change Requests</pluralLabel>
    <recordTypes>
        <fullName>Media_Change</fullName>
        <active>true</active>
        <label>Media Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsor_Change</fullName>
        <active>true</active>
        <label>Sponsor Change</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Does_Not_Expire_with_no_Expiration_Date</fullName>
        <active>true</active>
        <description>The user left &quot;Never Expires&quot; unchecked but did not enter an expiration date.</description>
        <errorConditionFormula>AND(ISNULL(ExpirationDate__c), NOT(NeverExpires__c))</errorConditionFormula>
        <errorDisplayField>ExpirationDate__c</errorDisplayField>
        <errorMessage>Expiration date cannot be empty if &quot;Never Expires&quot; is unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>High_Priority_Reason</fullName>
        <active>true</active>
        <description>Requires the user to fill out a reason in the High Priority Reason field if high priority is checked.</description>
        <errorConditionFormula>AND(HighPriority__c, ISBLANK(HighPriorityReason__c))</errorConditionFormula>
        <errorDisplayField>HighPriorityReason__c</errorDisplayField>
        <errorMessage>You must enter a reason in the High Priority Reason field in order to mark this request as high priority.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Missing_File_Link_for_Certain_Types</fullName>
        <active>true</active>
        <description>Throws an error if the user selects specific types but does not include a file link.</description>
        <errorConditionFormula>AND(
OR(ISPICKVAL(Type__c, &quot;Clinic Video&quot;), ISPICKVAL(Type__c, &quot;Clinic Sidebar&quot;), ISPICKVAL(Type__c, &quot;Clinic Slides&quot;)),
ISBLANK(FileLink__c))</errorConditionFormula>
        <errorDisplayField>FileLink__c</errorDisplayField>
        <errorMessage>You must include a file link for Clinic Sidebars, Slides, or Videos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Never_Expires_with_an_Expiration_Date</fullName>
        <active>true</active>
        <description>The user checked &quot;Never Expires&quot; but there is an expiration date filled out.</description>
        <errorConditionFormula>AND(NOT(ISNULL(ExpirationDate__c)), NeverExpires__c)</errorConditionFormula>
        <errorDisplayField>ExpirationDate__c</errorDisplayField>
        <errorMessage>Expiration date cannot be filled out if &quot;Never Expires&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Patient_Portal_Username_and_Password</fullName>
        <active>true</active>
        <description>Requires the user to enter a Portal Username and Portal Password for the patient portal types.</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Type__c, &quot;Tablet Patient Portals &amp; Websites&quot;),
    OR(ISBLANK(PortalUsername__c), ISBLANK(PortalPassword__c))
)</errorConditionFormula>
        <errorDisplayField>PortalUsername__c</errorDisplayField>
        <errorMessage>You must enter both a portal username and password for this change type.</errorMessage>
    </validationRules>
</CustomObject>